# Prophet

./: .env.example  .gitignore  .gitmodules  README.md  app.py  requirements.txt  run.py
backend/: README.md  config.py  requirements.txt  run.py
backend/app/: __init__.py  config.py  controllers.py  schemas.py  services.py
backend/discussion-data/: __init__.py
backend/foundation-data/: data-fetcher.py  pipeline_api.py
backend/middleware/: __init__.py  logging_middleware.py  rate_limit_middleware.py
backend/services/: orchestrator.py
discussion-data/: scraper.py
foundation-data/: data-fetcher.py  unified_data_pipeline.py  uniswap_governance_fetcher.py
foundation-data/governance-subgraph/: .env.example  total_voting_power.py
foundation-data/top-delegate/: top-delegation.py
foundation-data/treasury/: .env.example
foundation-data/utils/: formatter.py
frontend/: .gitignore  BACKEND_INTEGRATION.md  PROPOSAL_ID_SOLUTION.md  README.md  VOTING_IMPLEMENTATION.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  const.ts  index.css
graph-data/: __init__.py  fetch_data.py  graph_fetcher.py
model/: client_cli.py  hedera_utils.py  llm_client.py  requirements.txt  run_agents.py
uniswap-governance/: Cargo.toml  README.md  build.rs  schema.sql
uniswap-governance-sink/: schema.graphql  substreams.yaml
uniswap-governance/proto/: uniswap.proto
uniswap-governance/proto/sf/substreams/entity/v1/: entity.proto
uniswap-governance/proto/sf/substreams/sink/sql/services/v1/: services.proto
utils/: helpers.py
(+61 files in other folders)
