[package]
name = "uniswap-governance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-entity-change = "1.3"
substreams-database-change = "2.0"
hex = "0.4"
prost = "0.11"
hex-literal = "0.4"
prost-types = "0.11"
ethabi = "18.0.0"

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.8"
prost-build = "0.11"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"